# fuzzy-media-renamer

./: setup.cfg
src/fuzzy_media_renamer/: __init__.py  args.py  main.py
