[metadata]
name = fuzzy-media-renamer
version = attr:fuzzy_media_renamer.__pypi_version__
author = Jesse Bannon
description = Rename fuzzy media filenames
long_description = file: README.md
long_description_content_type= text/markdown
author_email = use_github_issues@nope.com
url = https://github.com/jmbannon/fuzzy-media-renamer
license = GNUv3
platforms = Unix
classifiers =
    Topic :: Multimedia :: Video
    License :: Public Domain
    Environment :: Console
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options.entry_points]
console_scripts =
    fuzzy-media-renamer = fuzzy_media_renamer.main:main

[options]
package_dir =
    = src
packages=find:

install_requires =
    colorama==0.4.6

[options.packages.find]
where=src

[options.extras_require]
test =
    coverage[toml]==6.3.2
    pytest==7.1.1
lint =
    black==22.3.0
    isort==5.10.1
    pylint==2.13.5
    pydocstyle[toml]==6.1.1
docs =
    sphinx==4.5.0
    sphinx-rtd-theme==1.0.0
build =
    build
    twine
    pyinstaller

